--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,3 @@
-beautifulsoup4==4.9.1
-certifi==2020.6.20
-chardet==3.0.4
-idna==2.10
-numpy==1.16.4
-Pillow==6.0.0
 pyjokes==0.6.0
-requests==2.24.0
-six==1.12.0
-soupsieve==2.0.1
-urllib3==1.25.10
+Flask==1.1.2
+Werkzeug==1.0.1
